--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.57.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "lucide-react": "^0.438.0",
     "next": "^14.2.4",
     "next-sanity": "^9.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanity": "^3.57.0",
     "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
