--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.57.0",
+    "@stripe/stripe-js": "^4.4.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -23,9 +25,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanity": "^3.57.0",
+    "stripe": "^16.9.0",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-shopping-cart": "^3.2.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
