--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "sanity:typegen": "sanity typegen generate --config ./src/sanity/sanity-typegen.json"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -20,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "groq": "^3.57.0",
     "lucide-react": "^0.438.0",
     "next": "^14.2.4",
     "next-sanity": "^9.4.7",
